--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "package",
-  "version": "0.0.0",
+  "name": "package__test",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,7 +10,6 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.3",
     "@angular/common": "^6.0.3",
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
+    "es6-shim": "0.35.4",
+    "reflect-metadata": "0.1.12",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
