--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "package__test",
-  "version": "1.0.0",
-  "private": true,
+  "name": "@abhi1266/test__package",
+  "version": "1.0.1",
+  "private": false,
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
